--- a/css/header.css
+++ b/css/header.css
@@ -13,8 +13,7 @@ main {
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
+    
 }
 
 h1, h2, p {
@@ -26,10 +25,9 @@ h1 {
 }
 
 header {
-    margin: 0;
     display: flex;
     width: 100%;
-    margin: 1em 0;
+    padding: 1em 0;
 }
 
 ul {
